tests/reference/asr-dim_float_01-74fa3d6.stderr
semantic error: Invalid argument type for `dim` or `mask`
 --> tests/errors/dim_float_01.f90:2:26
  |
2 |  print *, sum([1, 2, 3], 1.1)
  |                          ^^^ 
